# SYDE-223

./: CMakeLists.txt  README.md  doubly-linked-list.cpp  sequential-list.cpp  test.cpp
a1/: CMakeLists.txt
a2/: README.md  circular-queue.cpp  dynamic-stack.cpp  dynamic-stack.h  test.cpp
a3/: CMakeLists.txt  README.md  binary-search-tree.cpp  binary-search-tree.h  test.cpp
a4/: CMakeLists.txt  README.md  Trie.cpp  Trie.h  main.cpp  wordlist.txt
